[package]
name = "tesla-sei"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.43", features = ["rt", "sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = ["async"]
async = ["dep:tokio", "dep:tokio-stream"]

[build-dependencies]
prost-build = "0.14.3"